[GStreamer][EME] Fix phony debug output in player base for supported key system https://bugs.webkit.org/show_bug.cgi?id=174888

Reviewed by Žan Doberšek.

The debug output was returning always false because that method
was not checking anything before. Now it is and should reflect it.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:
(WebCore::MediaPlayerPrivateGStreamerBase::supportsKeySystem):

git-svn-id: http://svn.webkit.org/repository/webkit/trunk@219979 268f45cc-cd09-0410-ab3c-d52691b4dbfc